--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -35,11 +35,3 @@
 	margin-top: 2rem;
 	margin-bottom: 4rem;
 }
-
-.result *::-webkit-scrollbar {
-	height: 5px;
-	width: 100%;
-	background-color: #2f2f2f;
-	border-radius: 2px;
-	display: unset;
-}
